--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{
+{	
+	"name": "@encora/client",
 	"scripts": {
 		"styleguide": "styleguidist server",
 		"styleguide:build": "styleguidist build"
@@ -10,6 +11,7 @@
 		"expo": "^36.0.0",
 		"graphql": "^14.6.0",
 		"react": "^16.12.0",
+		"react-i18next": "^11.3.3",
 		"react-native": "^0.61.4",
 		"react-native-localize": "^1.3.3",
 		"styled-components": "^5.0.1",
