--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{	
+{
 	"name": "@encora/client",
 	"scripts": {
 		"styleguide": "styleguidist server",
@@ -14,6 +14,8 @@
 		"react-i18next": "^11.3.3",
 		"react-native": "^0.61.4",
 		"react-native-localize": "^1.3.3",
+		"react-native-svg": "^11.0.1",
+		"remixicon": "^2.3.0",
 		"styled-components": "^5.0.1",
 		"subscriptions-transport-ws": "^0.9.16"
 	},
@@ -24,6 +26,7 @@
 		"@babel/polyfill": "^7.6.0",
 		"@babel/preset-env": "^7.6.3",
 		"@babel/preset-flow": "^7.8.3",
+		"@babel/preset-react": "^7.8.3",
 		"babel-loader": "^8.0.6",
 		"babel-plugin-react-native-web": "^0.11.7",
 		"babel-preset-expo": "^7.0.0",
