--- a/package.json
+++ b/package.json
@@ -2,20 +2,27 @@
 	"name": "@encora/client",
 	"scripts": {
 		"styleguide": "styleguidist server",
-		"styleguide:build": "styleguidist build"
+		"styleguide:build": "styleguidist build",
+		"cypress": "node_modules/.bin/cypress open"
 	},
 	"dependencies": {
 		"@apollo/client": "^3.0.0-beta.36",
 		"@apollo/link-ws": "^2.0.0-beta.3",
 		"@apollo/react-hooks": "^3.1.3",
+		"@cypress/webpack-preprocessor": "^4.1.3",
+		"cesium": "^1.67.0",
 		"expo": "^36.0.0",
 		"graphql": "^14.6.0",
+		"moment": "^2.24.0",
 		"react": "^16.12.0",
 		"react-i18next": "^11.3.3",
 		"react-native": "^0.61.4",
 		"react-native-localize": "^1.3.3",
 		"react-native-svg": "^11.0.1",
+		"react-native-video": "^5.0.2",
+		"react-native-webview": "^8.1.2",
 		"remixicon": "^2.3.0",
+		"resium": "^1.11.0",
 		"styled-components": "^5.0.1",
 		"subscriptions-transport-ws": "^0.9.16"
 	},
@@ -30,12 +37,19 @@
 		"babel-loader": "^8.0.6",
 		"babel-plugin-react-native-web": "^0.11.7",
 		"babel-preset-expo": "^7.0.0",
+		"copy-webpack-plugin": "^5.1.1",
+		"cypress": "^4.1.0",
+		"cypress-react-unit-test": "^2.4.3",
+		"file-loader": "^5.1.0",
+		"html-webpack-include-assets-plugin": "^2.0.0",
+		"html-webpack-plugin": "^3.2.0",
 		"metro-react-native-babel-preset": "^0.56.0",
 		"react-art": "^16.10.2",
 		"react-dom": "^16.10.2",
 		"react-native-web": "^0.11.7",
+		"react-native-web-webview": "^0.2.8",
 		"react-styleguidist": "^10.6.2",
-		"webpack": "^4.41.1"
+		"webpack": "^4.42.0"
 	},
 	"private": true
 }
