--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"scripts": {
 		"styleguide": "styleguidist server",
 		"styleguide:build": "styleguidist build",
-		"cypress": "node_modules/.bin/cypress open"
+		"cypress": "node_modules/.bin/cypress open",
+		"icons:build": "./node_modules/.bin/generate-icon ./node_modules/remixicon/fonts/remixicon.css --prefix=.ri- --componentName=Icon --fontFamily=remixicon > source/icons/index.js"
 	},
 	"dependencies": {
 		"@apollo/client": "^3.0.0-beta.36",
@@ -28,12 +29,12 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.6.4",
-		"@babel/plugin-proposal-class-properties": "^7.5.5",
+		"@babel/plugin-proposal-class-properties": "^7.8.3",
 		"@babel/plugin-proposal-object-rest-spread": "^7.6.2",
 		"@babel/polyfill": "^7.6.0",
 		"@babel/preset-env": "^7.6.3",
-		"@babel/preset-flow": "^7.8.3",
 		"@babel/preset-react": "^7.8.3",
+		"@babel/preset-typescript": "^7.9.0",
 		"babel-loader": "^8.0.6",
 		"babel-plugin-react-native-web": "^0.11.7",
 		"babel-preset-expo": "^7.0.0",
@@ -46,9 +47,11 @@
 		"metro-react-native-babel-preset": "^0.56.0",
 		"react-art": "^16.10.2",
 		"react-dom": "^16.10.2",
+		"react-native-vector-icons": "^6.6.0",
 		"react-native-web": "^0.11.7",
 		"react-native-web-webview": "^0.2.8",
 		"react-styleguidist": "^10.6.2",
+		"url-loader": "^3.0.0",
 		"webpack": "^4.42.0"
 	},
 	"private": true
