--- a/app/android/app/build.gradle
+++ b/app/android/app/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: "com.android.application"
 
+apply plugin: "kotlin-android"
+apply plugin: "kotlin-android-extensions"
+
 import com.android.build.OutputFile
 
 /**
@@ -181,6 +184,7 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
